Fix layout was overflowing on single houses

--- a/src/index.css
+++ b/src/index.css
@@ -136,13 +136,9 @@ code {
 
 .remove-image {
   position: relative;
-  top: 40px;
+  top: 22px;
   left: 50%;
   transform: translateX(-75px);
-}
-
-.carousel-inner {
-  overflow: visible !important;
 }
 
 .carousel-indicators {
